# rust-palestrina

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: collections.rs  imports.rs  lib.rs  metadata.rs  mutators.rs  sequence.rs
src/algorithms/: algorithms.rs  mod.rs
src/collections/: event.rs  mod.rs  numeric.rs  traits.rs
src/constants/: dynamics.rs
src/e2e/: mod.rs  pf_son_1_finale.rs  water1.rs
src/entities/: key_signature.rs  mod.rs  scale.rs  time_signature.rs  timing.rs
src/metadata/: data.rs  list.rs
src/midi/: constants.rs  mod.rs  reader.rs  writer.rs
src/ops/: arithmetic.rs  mod.rs  pitch.rs
src/retired-seq-impl/: numeric.rs
src/retired-seq-impl/member/: chord.rs  mod.rs  numeric.rs  traits.rs
src/score/: mod.rs
src/sequence/: mod.rs  numeric.rs  sequence.rs  traits.rs
src/sequence/member/: chord.rs  lib.rs  member.rs  numeric.rs  traits.rs
src/sequences/: chord.rs  melody.rs  mod.rs  note.rs  numeric.rs  traits.rs
