[package]
name = "palestrina"
description = "A library for creating algorithmic music"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sevriarch/rust-palestrina"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"

[dev-dependencies]
assert_float_eq = "1"
